# sql-ai-prompt-generator

./: .gitignore  .tool-versions  CHANGELOG.md  README.md  postgres.py  pyproject.toml  readme.md  script.py  sqlite.py  util.py
.github/workflows/: build_and_publish.yml
llm_sql_prompt/: __init__.py  mysql.py  postgres.py  sqlite.py  util.py
