[tool.poetry]
name = "llm-sql-prompt"
version = "0.5.1"
description = "Utility to generate ChatGPT prompts for SQL writing, offering table structure snapshots and sample row data from Postgres and sqlite databases."
authors = ["Michael Bianco <mike@mikebian.co>"]
readme = "README.md"
homepage = "https://pypi.org/project/llm-sql-prompt/"
keywords = [
  "chatgpt",
  "sql",
  "prompt",
  "llms",
  "database",
  "postgres",
  "sqlite",
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
psycopg2 = "^2.9.9"

[tool.poetry.scripts]
llm-sql-prompt = "llm_sql_prompt:main"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
pyright = "^1.1.373"
pylint = "^3.2.6"

[tool.isort]
profile = "black"
# helpful when copy/pasting GPT code
float_to_top = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
