[project]
name = "llm-sql-prompt"
version = "0.9.0"
description = "Utility to generate ChatGPT prompts for SQL writing, offering table structure snapshots and sample row data from Postgres and sqlite databases."
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
requires-python = "~=3.11"
readme = "README.md"
keywords = [
    "chatgpt",
    "sql",
    "prompt",
    "llms",
    "database",
    "postgres",
    "sqlite",
]
dependencies = [
    "click>=8.1.7,<9",
    "mysql-connector-python>=9.2.0",
    # Psycopg 3 (module name psycopg)
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://pypi.org/project/llm-sql-prompt/"

[project.scripts]
llm-sql-prompt = "llm_sql_prompt:main"

[dependency-groups]
dev = [
    "isort>=5.13.2,<7",
    "black>=24.4.2,<26",
    "pyright>=1.1.373,<2",
    "pylint>=3.2.6,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
# helpful when copy/pasting GPT code
float_to_top = true
